--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,5 +12,6 @@ h1, h2, h3, h4, h5, h6, p, a, ul, ol, li, dl, dt, dd, blockquote {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin-bottom: .5rem;
+    opacity: .8;
 }
+
