--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,11 @@ body {
     margin: 0;
     padding: 0;
     background-color: #FAF7F3;
+    font-size: 18px;
+
+    @media ( min-width: 700px ) {
+        font-size: 16px;
+    }
 }
 
 h1, h2, h3, h4, h5, h6, p, a, ul, ol, li, dl, dt, dd, blockquote {
@@ -11,22 +16,25 @@ h1, h2, h3, h4, h5, h6, p, a, ul, ol, li, dl, dt, dd, blockquote {
     margin-top: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    opacity: .8;
+img, figure, figcaption, svg {
+    margin-bottom: 1rem;
+    margin-top: 0;
 }
 
-p, ul, ol, li, dl, dt, dd {
+h1, h2, h3, h4, h5, h6 {
+    opacity: .78;
+}
+
+p, a, ul, ol, li, dl, dt, dd {
     font-weight: 300;
-    opacity: .7;
 }
 
 a {
-    font-weight: 300;
-    color: #db7519;
+    color: #F1B783;
 }
 
 a:visited {
-    color: #db7519;
+    color: #F1B783;
 }
 
 blockquote {
@@ -43,5 +51,5 @@ blockquote:before {
     z-index: 2;
     width: 5px;
     height: 90%;
-    background: #F1B783;
+    background: #db7519;
 }
