--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,10 +27,12 @@ h1, h2, h3, h4, h5, h6 {
 
 p, a, ul, ol, li, dl, dt, dd {
     font-weight: 300;
+    opacity: .75;
 }
 
 a {
     color: #F1B783;
+    opacity: 1 !important;
 }
 
 a:visited {
