--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6, p, a, ul, ol, li, dl, dt, dd, blockquote {
     margin-top: 0;
 }
 
-img, figure, figcaption, svg {
+img, figure, figcaption {
     margin-bottom: 1rem;
     margin-top: 0;
 }
@@ -31,12 +31,12 @@ p, a, ul, ol, li, dl, dt, dd {
 }
 
 a {
-    color: #F1B783;
+    color: #eb9d57;
     opacity: 1 !important;
 }
 
 a:visited {
-    color: #F1B783;
+    color: #eb9d57;
 }
 
 blockquote {
