--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,20 +23,28 @@ img, figure, figcaption {
 
 h1, h2, h3, h4, h5, h6 {
     opacity: .78;
+    margin-bottom: .75rem;
 }
 
-p, a, ul, ol, li, dl, dt, dd {
+p, a, ul, ol, dl, dt, dd {
     font-weight: 300;
     opacity: .75;
 }
 
 a {
-    color: #eb9d57;
+    color: #ff8f2f;
     opacity: 1 !important;
 }
 
 a:visited {
-    color: #eb9d57;
+    color: #ff8f2f;
+}
+
+code {
+    color: #B10DC9;
+    background: #E8E8E8;
+    border-radius: 5px;
+    padding: .1rem .5rem;
 }
 
 blockquote {
