--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,12 +39,18 @@ a {
     opacity: 1 !important;
 }
 
+a:hover {
+	color: #fff !important;
+	background: #ff8f2f;
+	text-decoration: none;
+}
+
 a:visited {
     color: #ff8f2f;
 }
 
 code {
-    color: #B10DC9;
+    color: #000;
     background: #E8E8E8;
     border-radius: 5px;
     padding: .1rem .5rem;
@@ -53,7 +59,6 @@ code {
 
 pre { 
 	display: block;
-	width: 100%;
 	background: #E8E8E8;
     border-radius: 5px;
 	padding: 1rem .5rem;
